app/src/test/resources/autoexpect/syntax/parse/LexerTest/parseFail/4.txt
error: unterminated string literal
  --> test:2:1
2 | "str
    ~~~~
